[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Menu.gd" type="Script" id=1]
[ext_resource path="res://fonts/buttonFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Sprites/UI/Sand.png" type="Texture" id=13]
[ext_resource path="res://fonts/logoFont.tres" type="DynamicFont" id=14]

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 13 )
region_rect = Rect2( 0, 0, 64, 64 )
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[node name="Menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MenuBG" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 41, 46 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 75
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
margin_left = 504.0
margin_top = 102.0
margin_right = 883.0
margin_bottom = 358.0
size_flags_horizontal = 4
custom_colors/font_color = Color( 1, 0.980392, 0.898039, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/line_spacing = -60
custom_constants/shadow_offset_y = 3
custom_fonts/font = ExtResource( 14 )
text = "Desert
Punks"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 433.0
margin_right = 1387.0
margin_bottom = 677.0

[node name="Play" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_left = 610.0
margin_right = 776.0
margin_bottom = 58.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 1, 0.823529, 0.541176, 1 )
custom_colors/font_color = Color( 0.933333, 0.796078, 0.6, 1 )
custom_colors/font_color_hover = Color( 1, 0.823529, 0.541176, 1 )
custom_colors/font_color_pressed = Color( 1, 0.862745, 0.643137, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "Continue"
flat = true

[node name="New" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_left = 656.0
margin_top = 62.0
margin_right = 730.0
margin_bottom = 120.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 1, 0.823529, 0.541176, 1 )
custom_colors/font_color = Color( 0.933333, 0.796078, 0.6, 1 )
custom_colors/font_color_hover = Color( 1, 0.823529, 0.541176, 1 )
custom_colors/font_color_pressed = Color( 1, 0.862745, 0.643137, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "New"
flat = true

[node name="Options" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_left = 622.0
margin_top = 124.0
margin_right = 764.0
margin_bottom = 182.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 1, 0.823529, 0.541176, 1 )
custom_colors/font_color = Color( 0.933333, 0.796078, 0.6, 1 )
custom_colors/font_color_hover = Color( 1, 0.823529, 0.541176, 1 )
custom_colors/font_color_pressed = Color( 1, 0.862745, 0.643137, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "Options"
flat = true

[node name="Quit" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_left = 657.0
margin_top = 186.0
margin_right = 730.0
margin_bottom = 244.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 1, 0.823529, 0.541176, 1 )
custom_colors/font_color = Color( 0.933333, 0.796078, 0.6, 1 )
custom_colors/font_color_hover = Color( 1, 0.823529, 0.541176, 1 )
custom_colors/font_color_pressed = Color( 1, 0.862745, 0.643137, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "Quit"
flat = true

[connection signal="pressed" from="VBoxContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/New" to="." method="_on_New_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
